codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__exploring_step1_start_ls.snap
---
source: tui/src/chatwidget/tests.rs
expression: blob1
---
• Exploring
  └ List ls -la
